feat(backend): Fix Rate Limiter and improve some imports